// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/fragment-v2/Performance/lib/TableLegends render loading 1`] = `
<Styled(MuiBox)
  display="flex"
  justifyContent="center"
  mt={2}
>
  <Styled(MuiBox)
    width="424px"
  >
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-tHead-6"
      container={true}
    >
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-tCell-5"
        item={true}
        xs={6}
      >
        <Typography
          className=""
          color="inherit"
          inline={false}
          variant="caption"
          weight="bold"
        >
          STATUS
        </Typography>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-tCell-5"
        item={true}
        xs={3}
      >
        <Typography
          className=""
          color="inherit"
          inline={false}
          variant="caption"
          weight="bold"
        >
          VALUE
        </Typography>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-tCell-5"
        item={true}
        xs={3}
      >
        <Typography
          className=""
          color="inherit"
          inline={false}
          variant="caption"
          weight="bold"
        >
          %
        </Typography>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <React.Fragment>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-tBody-4"
        container={true}
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={6}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={3}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={3}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-tBody-4"
        container={true}
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={6}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={3}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={3}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-tBody-4"
        container={true}
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={6}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={3}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={3}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-tBody-4"
        container={true}
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={6}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={3}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={3}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-tBody-4"
        container={true}
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={6}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={3}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={3}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-tBody-4"
        container={true}
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={6}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={3}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={3}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-tBody-4"
        container={true}
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={6}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={3}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={3}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-tBody-4"
        container={true}
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={6}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={3}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-5"
          item={true}
          xs={3}
        >
          <Skeleton
            height={16}
            variant="rect"
            width="100%"
          />
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </React.Fragment>
  </Styled(MuiBox)>
</Styled(MuiBox)>
`;

exports[`src/fragment-v2/Performance/lib/TableLegends render success 1`] = `
<Styled(MuiBox)
  display="flex"
  justifyContent="center"
  mt={2}
>
  <Styled(MuiBox)
    width="424px"
  >
    <WithStyles(ForwardRef(Grid))
      className="makeStyles-tHead-3"
      container={true}
    >
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-tCell-2"
        item={true}
        xs={6}
      >
        <Typography
          className=""
          color="inherit"
          inline={false}
          variant="caption"
          weight="bold"
        >
          STATUS
        </Typography>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-tCell-2"
        item={true}
        xs={3}
      >
        <Typography
          className=""
          color="inherit"
          inline={false}
          variant="caption"
          weight="bold"
        >
          VALUE
        </Typography>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-tCell-2"
        item={true}
        xs={3}
      >
        <Typography
          className=""
          color="inherit"
          inline={false}
          variant="caption"
          weight="bold"
        >
          %
        </Typography>
      </WithStyles(ForwardRef(Grid))>
    </WithStyles(ForwardRef(Grid))>
    <React.Fragment>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-tBody-1"
        container={true}
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-2"
          item={true}
          xs={6}
        >
          <ChartLegend
            color="#000"
            labelProps={Object {}}
            variant="bar"
          >
            1
          </ChartLegend>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-2"
          item={true}
          xs={3}
        >
          <Typography
            className=""
            color="inherit"
            inline={false}
            variant="caption"
            weight="normal"
          >
            
          </Typography>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-2"
          item={true}
          xs={3}
        >
          <Typography
            className=""
            color="inherit"
            inline={false}
            variant="caption"
            weight="normal"
          >
            
          </Typography>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(Grid))
        className="makeStyles-tBody-1"
        container={true}
      >
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-2"
          item={true}
          xs={6}
        >
          <ChartLegend
            color="#000"
            labelProps={Object {}}
            variant="bar"
          >
            2
          </ChartLegend>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-2"
          item={true}
          xs={3}
        >
          <Typography
            className=""
            color="inherit"
            inline={false}
            variant="caption"
            weight="normal"
          >
            
          </Typography>
        </WithStyles(ForwardRef(Grid))>
        <WithStyles(ForwardRef(Grid))
          className="makeStyles-tCell-2"
          item={true}
          xs={3}
        >
          <Typography
            className=""
            color="inherit"
            inline={false}
            variant="caption"
            weight="normal"
          >
            
          </Typography>
        </WithStyles(ForwardRef(Grid))>
      </WithStyles(ForwardRef(Grid))>
    </React.Fragment>
  </Styled(MuiBox)>
</Styled(MuiBox)>
`;
